# cmake-superbuild-testing

./: CMakeLists.txt  build_debug.sh  clean.sh
cmake/: External_A.cmake  External_B.cmake  External_C.cmake  External_Foo.cmake
cmake/modules/: FindA.cmake  FindB.cmake  FindC.cmake
foo/: CMakeLists.txt
foo/src/: main.cpp
lib/A/: CMakeLists.txt
lib/A/A1/: CMakeLists.txt
lib/A/A1/src/a1/: a1.cpp  a1.h
lib/A/A2/: CMakeLists.txt
lib/A/A2/src/a2/: a2.cpp  a2.h
lib/B/: CMakeLists.txt
lib/B/src/: b.cpp  b.h
lib/C/: CMakeLists.txt  c.cpp  c.h
